--- a/content.css
+++ b/content.css
@@ -58,7 +58,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 8px 0px;
+    padding: 0px 0px 8px 0px;
     border-bottom: 1px solid #e0e0e0;
 }
 
@@ -161,7 +161,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 8px 0px;
+    padding: 0px 0px 8px 0px;
     border-bottom: 1px solid #e0e0e0;
     margin-bottom: 16px;
     flex-shrink: 0; /* Prevents header from shrinking */
